# 2019-Q3-EDS_Funcionais_Dia03

./: README.md  dia03.cabal
src/: FingerTree.hs
test/: Spec.hs
